--- a/backend/config.json
+++ b/backend/config.json
@@ -1,3 +1,3 @@
 {
-    "connectionString" : "mongodb+srv://testuser:testuser123@notesapp.hi7lr.mongodb.net/?retryWrites=true&w=majority&appName=notesapp"
+    "connectionString" : ""  //Your Connecting String
 }
